--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,9 +1,6 @@
 body {
   background: #ecf0f3;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
@@ -11,9 +8,17 @@ body {
   margin: 0;
 }
 
+#box-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #box {
   height: 250px;
   width: 250px;
+  margin: 0;
   animation: animate 10s linear infinite;
   z-index: 1;
   box-shadow: 18px 18px 30px 1px inset #d1d9e6, -18px -18px 30px 1px inset #fff;
